--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,7 @@ main {
   left: 0;
   height: 40vh;
   width: 100%;
-  background-image: linear-gradient(hsla(277, 64%, 61%,0.47), hsla(277, 64%, 61%,0.67) );
+  background-image: linear-gradient(hsl(274deg 96% 26% / 52%), hsla(277, 64%, 61%,0.67) );;
   border-top-left-radius: var(--border-radius);
   border-top-right-radius: var(--border-radius);
 }
